# mkdocs-plugins

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: cards.md  minify.md
plugins/cards/: plugin.py
plugins/minify/: plugin.py
tests/: README.md  __init__.py  requirements.txt
tests/minify/: README.md  test_minify.py
